examples/test/testpolicy13609.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13609
  namespace: namespace349
spec:
  podSelector:
    matchLabels:
      key21: value43
      key25: value4
      key42: value16
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key17: value33
      podSelector:
        matchLabels:
          key0: value30
          key34: value23
          key21: value20
